<?xml version="1.0"?>
<package>
  <name>demo_concert</name>
  <version>0.0.0</version>
  <description>The demo_concert package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>concert_master</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>concert_master</run_depend>
  <run_depend>rospy</run_depend>

</package>
